<resources>
    <string name="app_name">Synapse</string>
    <string name="action_settings">Settings</string>
    <string name="available_bots">Available Bots</string>
    <string name="details">Details</string>
    <string name="bot_type">TYPE</string>
    <string name="bot_location">LOCATION</string>
    <string name="bot_rating">RATING</string>
    <string name="cancel">CANCEL</string>
    <string name="upgrade">UPGRADE</string>
    <string name="cpu">CPU</string>
    <string name="memory">MEMORY</string>
    <string name="storage">STORAGE</string>
    <string name="bandwidth">BANDWIDTH</string>
    <string name="missions">MISSIONS</string>
    <string name="transfer">TRANSFER</string>
    <string name="specs">SPECS:</string>
    <string name="purchase">PURCHASE</string>
    <string name="upgrade_component">UPGRADE COMPONENT</string>
    <string name="currency">CURRENCY</string>
    <string name="credit_balance">CREDIT BALANCE</string>
    <string name="tag_balance">TAG BALANCE</string>
    <string name="tags">TAGS</string>
    <string name="credits">CREDITS</string>
    <string name="purchase_slot">PURCHASE SLOT</string>
    <string name="bot_value">TOTAL VALUE</string>
    <string name="bot_insurance">INSURANCE COST</string>
    <string name="enter_node_name">ENTER NODE NAME</string>
    <string name="search">SEARCH</string>
    <string name="cost_label">COST:</string>
    <string name="duration_label">DURATION:</string>
    <string name="security_label">SECURITY:</string>
    <string name="distance_label">DISTANCE:</string>
    <string name="government_label">GOVERNMENT:</string>
    <string name="population_label">POPULATION:</string>
    <string name="economy_label">ECONOMY:</string>
    <string name="state_label">STATE:</string>
    <string name="booting">BOOTING&#8230;</string>
    <string name="shutting_down">SHUTTING DOWN&#8230;</string>
    <string name="mission_prep">PREPPING FOR MISSION&#8230;</string>
    <string name="mission_complete">MISSION SUMMARY</string>
    <string name="unknown">UNKNOWN</string>
    <string name="accept">ACCEPT</string>
    <string name="damaged">DAMAGED</string>
    <string name="destroyed">DESTROYED</string>
    <string name="destination_label">DESTINATION:</string>
    <string name="rank_label">RANK:</string>
    <string name="rewards_label">REWARDS:</string>
    <string name="success_label">SUCCESS RATE:</string>
    <string name="status">STATUS</string>
</resources>
