<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkest_blue"
    style="@style/synapse_dialog">

    <LinearLayout
        android:id="@+id/dialog_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:textSize="18sp"
            android:background="@color/darkest_blue"
            android:textColor="@color/highlight"
            android:text="@string/upgrade_component"
            android:layout_weight="0.5"/>

        <ToggleButton
            android:id="@+id/credit_tag_toggle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textOn="@string/tags"
            android:textOff="@string/credits"
            android:textColor="@color/highlight"
            android:background="@color/highlight_alpha_label"/>
    </LinearLayout>



    <ScrollView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scrollbarThumbVertical="@color/highlight">

        <RadioGroup
            android:id="@+id/upgradeChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp">
        </RadioGroup>

    </ScrollView>

    <LinearLayout
        android:id="@+id/dialog_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button style="?android:buttonBarStyle"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_weight="0.5"
            android:textColor="@color/button_text"
            android:background="@drawable/button_back"
            android:layout_margin="7dp"/>

        <Button style="?android:buttonBarStyle"
            android:text="@string/purchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnConfirm"
            android:layout_weight="0.5"
            android:textColor="@color/button_text"
            android:background="@drawable/button_back"
            android:layout_margin="7dp"/>
    </LinearLayout>
</LinearLayout>