<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkest_blue"
    style="@style/synapse_dialog">

    <LinearLayout
        android:id="@+id/dialog_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:textSize="18sp"
            android:background="@color/darkest_blue"
            android:textColor="@color/highlight"
            android:text="@string/purchase_slot"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="@color/highlight_alpha"
        android:textColor="@color/highlight"
        android:drawableRight="@drawable/tag"
        android:drawableEnd="@drawable/tag"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp" />

    <LinearLayout
        android:id="@+id/dialog_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button style="?android:buttonBarStyle"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_weight="0.5"
            android:textColor="@color/button_text"
            android:background="@drawable/button_back"
            android:layout_margin="7dp"/>

        <Button style="?android:buttonBarStyle"
            android:text="@string/purchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnConfirm"
            android:layout_weight="0.5"
            android:textColor="@color/button_text"
            android:background="@drawable/button_back"
            android:layout_margin="7dp"/>
    </LinearLayout>
</LinearLayout>